Add order status update functionality with notifications and fix role