@@ -75,7 +75,7 @@ public class OrderController {
             return ORDER_VIEW;
         } catch (Exception e) {
             model.addAttribute(ERROR, "Có lỗi xảy ra khi tải danh sách đơn hàng: " + e.getMessage());
-            model.addAttribute(ORDERS, Arrays.asList());
+            model.addAttribute(ORDERS, List.of());
             model.addAttribute(STATUS_OPTIONS, ALL_STATUSES);
             return ORDER_VIEW;
         }
@@ -128,22 +128,12 @@ public class OrderController {
                 return "redirect:/admin/orders/" + orderId;
             }
             
-            // Get và update order
-            Order order = orderService.getOrderById(orderId);
-            if (order == null) {
-                redirectAttributes.addFlashAttribute(ERROR, "Không tìm thấy đơn hàng với ID: " + orderId);
-                return ORDER_VIEW_REDIRECT;
-            }
-            
-            String oldStatus = order.getStatus();
-            order.setStatus(newStatus);
-            
-            Order updatedOrder = orderService.updateOrder(order);
+            // Get và update order status (with notification)
+            Order updatedOrder = orderService.updateOrderStatus(orderId, newStatus);
             if (updatedOrder != null) {
-                String oldStatusDisplay = getStatusDisplayName(oldStatus);
                 String newStatusDisplay = getStatusDisplayName(newStatus);
                 redirectAttributes.addFlashAttribute(SUCCESS, 
-                    String.format("✅ Đã cập nhật trạng thái đơn hàng từ %s thành %s thành công!", oldStatusDisplay, newStatusDisplay));
+                    String.format("✅ Đã cập nhật trạng thái đơn hàng thành %s thành công! Thông báo đã được gửi đến khách hàng.", newStatusDisplay));
             } else {
                 redirectAttributes.addFlashAttribute(ERROR, "Không thể cập nhật trạng thái đơn hàng");
             }
@@ -211,10 +201,7 @@ public class OrderController {
                     return true;
                 }
                 // ✅ NEW - Search in alternative receiver phone
-                if (order.getAlternativeReceiverPhone() != null && order.getAlternativeReceiverPhone().contains(searchTerm)) {
-                    return true;
-                }
-                return false;
+                return order.getAlternativeReceiverPhone() != null && order.getAlternativeReceiverPhone().contains(searchTerm);
             })
             .collect(Collectors.toList());
     }
@@ -233,9 +220,8 @@ public class OrderController {
                         return o1.getOrderDate().compareTo(o2.getOrderDate());
                     })
                     .collect(Collectors.toList());
-                    
+
             case "date_desc":
-            default:
                 return orders.stream()
                     .sorted((o1, o2) -> {
                         if (o1.getOrderDate() == null && o2.getOrderDate() == null) return 0;
@@ -244,7 +230,7 @@ public class OrderController {
                         return o2.getOrderDate().compareTo(o1.getOrderDate());
                     })
                     .collect(Collectors.toList());
-                    
+
             case "price_asc":
                 return orders.stream()
                     .sorted((o1, o2) -> {
@@ -253,7 +239,7 @@ public class OrderController {
                         return amount1.compareTo(amount2);
                     })
                     .collect(Collectors.toList());
-                    
+
             case "price_desc":
                 return orders.stream()
                     .sorted((o1, o2) -> {
@@ -262,7 +248,7 @@ public class OrderController {
                         return amount2.compareTo(amount1);
                     })
                     .collect(Collectors.toList());
-                    
+
             case "status":
                 return orders.stream()
                     .sorted((o1, o2) -> {
@@ -271,6 +257,8 @@ public class OrderController {
                         return status1.compareTo(status2);
                     })
                     .collect(Collectors.toList());
+                default:
+                    return List.of();
         }
     }
 
